# iperf

./: .gitignore  Makefile.am  Makefile.in  README  STATUS.md  config.h.in  configure
.github/workflows/: ci.yml
compat/: Makefile.in  Thread.c
doc/: Makefile.in
docs/: audit_notes.md  iperf3-strategy.md  modernization.md  nat-simulation-strategy.md  upstream-comparison.md
docs/archaeology/: build_system_map.md  repo_map.md  reverse_patch_map.md
include/: Dataxfer.hpp  Makefile.am  Makefile.in  Server.hpp  Settings.hpp  headers.h
man/: Makefile.in  iperf.1
src/: Client.cpp  Dataxfer.cpp  Makefile.am  Makefile.in  ReportDefault.c  Reporter.c  Server.cpp  Settings.cpp
tests/: reverse-cases.tsv  reverse-matrix.sh
